<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="16dp"
        android:text="@string/user_info_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name_default"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_default"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"
        android:padding="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/route_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textViewRoute"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:layout_marginBottom="24dp"
        android:background="#F5F5F5"
        android:minHeight="100dp"
        android:padding="8dp"
        android:text=""
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonSetPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_set_path"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        android:padding="16dp" />

    <Button
        android:id="@+id/buttonCallTaxi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:padding="16dp"
        android:text="@string/button_call_taxi"
        android:textSize="18sp" />

</LinearLayout>
